--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Welcome to the Epic Mickey Wiki Discord Server!</title>
         
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="icon.ico">
         <style>
             * {
                 box-sizing: border-box;
