--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <button onclick="location.href='https:\/\/discord.gg/'+inviteCode">JOIN SERVER</button>
             </section>
 
-            <p class="disclaimer">The Epic Mickey Wiki Discord server is not affiliated the Walt Disney Company.</p>
+            <p class="disclaimer">The Epic Mickey Wiki Discord server is not affiliated with the Walt Disney Company.</p>
         </main>
     </body>
 </html>
