--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <li>Don't spam messages, images, or reacts.</li>
                     <li>No NSFW content or excessively dark memes are permitted. If your nickname or avatar falls under these categories, you may be asked to change it.</li>
                     <li>No insults, slurs, or language that otherwise might make another user feel attacked.</li>
-                    <li>Don't self-promote. If you have an Epic Mickey-related server, message an admin so it can be considered for the #community channel.</li>
+                    <li>Don't self-promote. If you have an Epic Mickey-related server, message an admin so it can be considered for the #links channel.</li>
                     <li>Treat other users with respect.</li>
                     <li>Don't impersonate other users.</li>
                     <li>The mods have the final say in any matters that can be considered disruptive to the server.</li>
