--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
             <section class="rules">
                 <h2>Rules</h2>
                 <ol>
-                    <li>This server exists primarily for Epic Mickey-related discussion. Please use the channels for their intended purposes, especially when discussing topics other than Epic Mickey.</li>
+                    <li>While off-topic channels are provided for socializing, this server's primary purpose is to provide a place for Epic Mickey-related discussion. Please use the channels for their intended purposes, especially when discussing topics outside of the Epic Mickey series.</li>
                     <li>Don't spam messages, images, or reacts.</li>
-                    <li>No NSFW content or excessively dark memes are permitted. If your nickname or avatar falls under these categories, you may be asked to change it.</li>
-                    <li>No insults, slurs, or language that otherwise might make another user feel attacked.</li>
+                    <li>No NSFW images, excessively dark memes, or highly offensive content (including shock-value humor) are permitted. If your nickname or avatar falls under these categories, you may be asked to change it.</li>
+                    <li>Refrain from using insults, slurs, or language to belittle other users.</li>
                     <li>Don't self-promote. If you have an Epic Mickey-related server, message an admin so it can be considered for the #links channel.</li>
-                    <li>Treat other users with respect.</li>
                     <li>Don't impersonate other users.</li>
+                    <li>In most cases, your off-server statements and conversations are none of the moderation team's business. However, if your behavior towards others threatens their safety or makes them feel uncomfortable with socializing in the same space, the situation may be investigated. In extreme circumstances, the moderators reserve the right to ban or mute those who engage in off-server bullying, harassment, or offensive remarks towards other members.</li>
+                    <li>Bringing off-server drama into public channels is a potentially punishable offence, regardless of your innocence in the matter. If you have an issue with another member of the server due to off-server conflict, the public channels is not the place to debate or seek justice for it. If the matter cannot be resolved in private, contact a moderator ASAP.</li>
+                    <li>Treat other users with respect.</li>
                     <li>The mods have the final say in any matters that can be considered disruptive to the server.</li>
                 </ol>
             </section>
