--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <li>Don't self-promote. If you have an Epic Mickey-related server, message an admin so it can be considered for the #links channel. Discussion about the Epic Team is not permitted at this time.</li>
                     <li>Don't impersonate other users.</li>
                     <li>In most cases, your off-server statements and conversations are none of the moderation team's business. However, if your behavior towards others threatens their safety or makes them feel uncomfortable with socializing in the same space, the situation may be investigated. In extreme circumstances, the moderators reserve the right to ban or mute those who engage in off-server bullying, harassment, or offensive remarks towards other members.</li>
-                    <li>Bringing off-server drama into public channels is a potentially punishable offence, regardless of your innocence in the matter. If you have an issue with another member of the server due to off-server conflict, the public channels is not the place to debate or seek justice for it. If the matter cannot be resolved in private, contact a moderator ASAP.</li>
+                    <li>Bringing off-server drama into public channels is a potentially punishable offence, regardless of your innocence in the matter. If you have an issue with another member of the server due to off-server conflict, the public channels are not the place to debate or seek justice for it. If the matter cannot be resolved in private, contact a moderator ASAP.</li>
                     <li>Treat other users with respect.</li>
                     <li>The mods have the final say in any matters that can be considered disruptive to the server.</li>
                 </ol>
@@ -132,7 +132,7 @@
 
             <section class="invitations">
                 <h2>Invitations</h2>
-                <p>To invite others to this Discord server, please send them the link to this website instead of the discord.gg link.</p>
+                <p>To invite others to the server, please send them the link to this website instead of the Discord invite link.</p>
             </section>
 
             <section class="agreement">
