--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="favicon.ico">
 
-        <script>var inviteCode = "4Wtfy34mQp";</script>
+        <script>var inviteCode = "dn7bnuqFcz";</script>
     </head>
 
     <body>
